WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116130
observeUseKindOnNode doesn't contain a case for KnownCellUse
https://bugs.webkit.org/show_bug.cgi?id=116130
Summary
observeUseKindOnNode doesn't contain a case for KnownCellUse
Mark Hahnenberg
Reported
2013-05-14 19:21:37 PDT
It should.
Attachments
Patch
(1.33 KB, patch)
2013-05-14 19:29 PDT
,
Mark Hahnenberg
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-05-14 19:29:05 PDT
Created
attachment 201780
[details]
Patch
Mark Hahnenberg
Comment 2
2013-05-16 11:19:09 PDT
Committed
r150190
: <
http://trac.webkit.org/changeset/150190
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug