fourthTier: observeUseKindOnNode doesn't contain a case for KnownCellUse

https://bugs.webkit.org/show_bug.cgi?id=116130

This would just lead to us being overly conservative when deciding
whether we should unbox GetLocals with KnownCellUse UseKinds.

Reviewed by Filip Pizlo.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::observeUseKindOnNode):

Canonical link: https://commits.webkit.org/136948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153164 268f45cc-cd09-0410-ab3c-d52691b4dbfc